feature : delay note (#251)